Fix UI stuck while the last note in a row is playing
Remove the last note from a wait list of UI resume.

--- a/src/style.css
+++ b/src/style.css
@@ -77,9 +77,14 @@ body {
   background-image: url("data:image/svg+xml;utf8, <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100' id='sector_Xy'><path fill='hsl(242, 81%, 88%)'  d='M0,0 L100,0 A100,100 1 0,1 0,100 z' /></svg>");
 }
 
-.--noevents {
+.--events-disabled {
   cursor: auto;
   pointer-events: none;
+}
+
+.--events-enabled {
+  cursor: pointer;
+  pointer-events: auto;
 }
 
 .menu {
@@ -101,13 +106,14 @@ body {
 .menu__message {
   align-items: center;
   background-color: var(--primary-color);
-  box-shadow: inset 0 0 12px -2px var(--primary-color),
-    0 0 2px 2px var(--secondary-color), 0 0 0px 4px red;
+  border-radius: 15%;
+  /* box-shadow: inset 0 0 12px -2px var(--primary-color), */
+  /* 0 0 2px 2px var(--secondary-color), 0 0 0px 4px red; */
   display: flex;
   justify-content: center;
   flex: 0 0 auto;
   height: 30%;
-  margin: 1rem;
+  /* margin: 1rem; */
   width: 30%;
 }
 
@@ -121,7 +127,7 @@ body {
   display: flex;
   flex: 0 0 35%;
   justify-content: space-between;
-  width: 70%;
+  /* width: 70%; */
 }
 
 .menu__group {
@@ -163,21 +169,74 @@ body {
 .--green {
   background-color: green;
 }
+@media screen and (min-width: 22rem) {
+  .wrapper {
+    width: 70%;
+  }
+}
 
 @media screen and (min-width: 30rem) {
   .main {
-    height: 50vw;
-    width: 50vw;
+    /* height: 50vw; */
+    /* width: 50vw; */
+    height: 20rem;
+    width: 20rem;
   }
 
   .menu {
-    height: 30vw;
-    width: 30vw;
+    /* height: 30vw; */
+    /* width: 30vw; */
+    height: 11rem;
+    width: 11rem;
+  }
+
+  .wrapper {
+    flex: 0 0 40%;
+  }
+
+  .menu__message {
+    margin: 1rem;
+  }
+
+  .menu__button {
+    height: 1.1rem;
+    width: 1.1rem;
   }
 
   .message {
     font-size: 1.7rem;
     margin-top: 0.6rem;
+  }
+}
+
+@media screen and (min-width: 40rem) {
+  .main {
+    /* height: 50vw; */
+    /* width: 50vw; */
+    height: 30rem;
+    width: 30rem;
+  }
+
+  .menu {
+    /* height: 30vw; */
+    /* width: 30vw; */
+    height: 15rem;
+    width: 15rem;
+  }
+
+  .wrapper {
+    flex: 0 0 35%;
+    width: 73%;
+  }
+
+  .menu__button {
+    height: 1.5rem;
+    width: 1.5rem;
+  }
+
+  .menu__label {
+    font-size: 0.8rem;
+    margin-top: 0.7rem;
   }
 }
 
